--- a/style.css
+++ b/style.css
@@ -134,3 +134,62 @@
       height: 60vh; 
     }
   }
+
+
+
+  /* Wenhan */
+
+  .line {
+    /* for smoother transition for the combined graph */
+    transition: stroke-width 0.1s ease;
+  }
+
+  .instruction {
+    text-align: center;
+    font-size: 16px;
+    color: #7f0000;
+    margin-top: 20px;
+  }
+
+  button {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  button:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+  }
+
+  .grid line {
+    stroke: lightgrey;
+    stroke-opacity: 0.7;
+    shape-rendering: crispEdges;
+  }
+
+  .grid path {
+    stroke-width: 0;
+  }
+
+  .line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 2;
+  }
+
+  .user-line {
+    fill: none;
+    stroke: red;
+    stroke-width: 2;
+  }
+
+  .area {
+    fill: lightsteelblue;
+    opacity: 0.5;
+  }
