--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    /* background-color: 'fefae0'; */
+    background-color: #fcfbf5;
+
   }
   
   /* Navigation bar styling */
@@ -29,6 +32,7 @@
     text-decoration: none;
     cursor: pointer;
     padding: 1rem;
+    
 
   }
   
@@ -38,9 +42,9 @@
   
   /* Section styling */
   section {
-    padding: 100px 20px;
-    margin-top: 50px;
+    padding: 50px 20px;
     border-bottom: 1px solid #ddd;
+    
   }
   
   /* Visualization container styling */
@@ -58,15 +62,33 @@
   } 
 
   h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    text-align: center;
   }
   
   h2 {
-    font-size: 1.3em;
+    font-size: 1.5rem;
+    font-family: 'Times New Roman', Times, serif;
   
   }
+
+  h3 {
+    font-size: 1.2rem;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+  }
+
+  .headingName {
+    padding: 2.5rem;
+
+  }
+
   p {
     font-size:1rem;
+    line-height: 1.5;
   }
   
 
@@ -83,8 +105,7 @@
   border-right: 0.05rem solid black;
 }
 .graph-section {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+
   margin-right: 0rem;
   width: 60rem;
   /*max-width: 60rem;*/
@@ -95,9 +116,10 @@
   padding-right: 1rem;
   margin-left: 1rem;
   margin-right: 1rem;
+  line-height: 2;
 }
 .box1 {
-  background-color: white;
+  background-color: #fcfbf5;
   border-radius: 0.3rem;
   display: block;
   /*max-width need to be adjusted for responsiveness*/
@@ -146,8 +168,8 @@
 
   .instruction {
     text-align: center;
-    font-size: 16px;
-    color: #7f0000;
+    font-size: 18px;
+    color: #3b3434;
     margin-top: 20px;
   }
 
@@ -155,7 +177,7 @@
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #3b3434;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -185,7 +207,7 @@
 
   .user-line {
     fill: none;
-    stroke: red;
+    stroke: #3b3434;
     stroke-width: 2;
   }
 
@@ -193,3 +215,16 @@
     fill: lightsteelblue;
     opacity: 0.5;
   }
+
+  .fade-in-section {
+    opacity: 0; /* Start transparent */
+    transform: translateY(20px); /* Start slightly below the viewport */
+    transition: opacity 1s ease-out, transform 1s ease-out; /* Smooth transition */
+    will-change: opacity, transform; /* Optimize rendering */
+}
+
+/* Apply full opacity when the section is visible */
+.fade-in-section.is-visible {
+    opacity: 1;
+    transform: translateY(0); /* Reset position */
+}
