added new iteration

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
   
   body {
     font-family: Arial, sans-serif;
@@ -17,12 +18,13 @@
   nav {
     position: fixed;
     display: flex;
-  justify-content: flex-end;  
+    justify-content: flex-end;  
     top: 0;
     width: 100%;
-    background: #3b3434;
+    background: #644FA0;
+    /*border-bottom: 1px solid #c2adfa;*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
     z-index: 1000;
-
 
   }
   
@@ -39,10 +41,50 @@
   nav a:hover {
     text-decoration: underline;
   }
+
+  /* Banner/Header Styling */
+.banner {
+  background-color: #644FA0; /* purple shade */
+  background-image: url('images/banner.png'); /* Add the URL for the image here */
+  background-size: cover;
+  background-position: center;
+  color: #FCFBF5;
+  text-align: left;
+  padding: 15rem;
+  position: relative;
+  margin-top: -1rem;
+}
+
+.banner-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.project-title {
+  font-family: Arial, sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0 0 10px 0;
+}
+
+.banner h1 {
+  font-family: 'Times New Roman', Times, serif;
+  text-align: left;
+  font-size: 2.5rem;
+  line-height: 1.5;
+  margin: 10px 0;
+}
+
+.authors {
+  font-family: Arial, sans-serif;
+  font-size: 1.2rem;
+  font-weight: normal;
+  margin-top: 3rem;
+}
   
   /* Section styling */
   section {
-    padding: 50px 20px;
+    padding: 30px 20px;
     border-bottom: 1px solid #ddd;
     
   }
@@ -72,13 +114,14 @@
   h2 {
     font-size: 1.5rem;
     font-family: 'Times New Roman', Times, serif;
-  
+    color: #644FA0;
   }
 
   h3 {
     font-size: 1.2rem;
-    font-family: 'Times New Roman', Times, serif;
-    text-align: center;
+    font-family: Arial, sans-serif;
+    text-align: left;
+    margin-left: 2rem;
   }
 
   .headingName {
@@ -91,6 +134,10 @@
     line-height: 1.5;
   }
   
+  li {
+    padding-bottom: 1rem;
+    line-height: 1.5;
+  }
 
 /*left-right section scroll*/
 .scroll-grid {
@@ -167,17 +214,20 @@
   }
 
   .instruction {
-    text-align: center;
-    font-size: 18px;
-    color: #3b3434;
-    margin-top: 20px;
+    text-align: left;
+    font-size: 14px;
+    color: #666363;
+    margin-left: 2rem;
+    margin-bottom: .5rem;
+    font-style: italic;
+    
   }
 
   button {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
-    background-color: #3b3434;
+    background-color: #644FA0;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -201,14 +251,15 @@
 
   .line {
     fill: none;
-    stroke: steelblue;
-    stroke-width: 2;
+    stroke: #3b3434;
+    stroke-width: 3;
   }
 
   .user-line {
     fill: none;
-    stroke: #3b3434;
-    stroke-width: 2;
+    stroke: #644FA0;
+    stroke-width: 3;
+    
   }
 
   .area {
@@ -227,4 +278,141 @@
 .fade-in-section.is-visible {
     opacity: 1;
     transform: translateY(0); /* Reset position */
+}
+
+/*highlighter*/
+@keyframes highlight {
+	to {
+		background-position: 0;
+	}
+}
+
+mark {
+	animation: highlight linear forwards;
+	animation-timeline: view(60% 20%);
+	background: linear-gradient(
+		to right,
+		oklch(0.86 0.19 84.89 / .4) 50%,
+		oklch(0.86 0.19 84.89 / 0) 50%
+	);
+	background-position: 100%;
+	background-size: 200% 100%;
+	border-radius: 0.125rem;
+	padding-inline: 0.125rem;
+}
+
+/*scroll down button*/
+@-webkit-keyframes ani-mouse {
+  0% {
+  opacity: 1;
+  top: 29%;
+  }
+  15% {
+  opacity: 1;
+  top: 50%;
+  }
+  50% {
+  opacity: 0;
+  top: 50%;
+  }
+  100% {
+  opacity: 0;
+  top: 29%;
+  }
+}
+@-moz-keyframes ani-mouse {
+  0% {
+  opacity: 1;
+  top: 29%;
+  }
+  15% {
+  opacity: 1;
+  top: 50%;
+  }
+  50% {
+  opacity: 0;
+  top: 50%;
+  }
+  100% {
+  opacity: 0;
+  top: 29%;
+  }
+}
+@keyframes ani-mouse {
+  0% {
+  opacity: 1;
+  top: 29%;
+  }
+  15% {
+  opacity: 1;
+  top: 50%;
+  }
+  50% {
+  opacity: 0;
+  top: 50%;
+  }
+  100% {
+  opacity: 0;
+  top: 29%;
+  }
+}
+ .scroll-btn {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin-top: 5rem;
+}
+.scroll-btn p{
+  margin-left: -55px;
+
+}
+.scroll-btn > * {
+  display: inline-block;
+  line-height: 18px;
+  font-size: 13px;
+  font-weight: normal;
+  color: #7f8c8d;
+  color: #FCFBF5;
+  font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  letter-spacing: 2px;
+}
+.scroll-btn > *:hover,
+.scroll-btn > *:focus,
+.scroll-btn > *.active {
+  color: #FCFBF5;
+}
+.scroll-btn > *:hover,
+.scroll-btn > *:focus,
+.scroll-btn > *:active,
+.scroll-btn > *.active {
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+}
+.scroll-btn .mouse {
+  position: relative;
+  display: block;
+  width: 35px;
+  height: 55px;
+  margin: 0 auto 20px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 3px solid #FCFBF5;
+  border-radius: 23px;
+}
+.scroll-btn .mouse > * {
+  position: absolute;
+  display: block;
+  top: 29%;
+  left: 50%;
+  width: 8px;
+  height: 8px;
+  margin: -4px 0 0 -4px;
+  background: #FCFBF5;
+  border-radius: 50%;
+  -webkit-animation: ani-mouse 2.5s linear infinite;
+  -moz-animation: ani-mouse 2.5s linear infinite;
+  animation: ani-mouse 2.5s linear infinite;
 }
